<resources>

    <!-- General strings -->
    <string name="app_name">NFC Sensor Comm</string>
    <string name="title_activity_settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>

    <!-- Dialog and Toast Strings -->
    <string name="dialog_reset_tag">Do you really want to reset the tag ?</string>
    <string name="calibration_profile_not_removed">Profile could not removed</string>
    <string name="calibration_profile_successfully_removed">Profile successfully removed</string>

    <!-- ############# Strings related to Settings ############# -->
    <!-- Default values -->
    <string name="graph_time_scale_def_val">MILLISECOND</string>
    <string name="num_bytes_per_sample_def_val">2</string>
    <string name="num_bits_per_sample_roc1_def_val">12</string>
    <string name="num_bits_per_sample_roc2_def_val">12</string>
    <string name="num_bits_per_sample_roc3_def_val">12</string>
    <string name="num_samples_roc1_def_val">100</string>
    <string name="num_samples_roc2_def_val">100</string>
    <string name="num_samples_roc3_def_val">100</string>
    <string name="value_ref_roc1_def_val">3.3</string>
    <string name="value_ref_roc2_def_val">2.5</string>
    <string name="sampling_frequency_def_val">11500</string>
    <string name="num_samples_for_derivative_def_val">50</string>
    <string name="deadband_size_def_val">50</string>
    <string name="sensor_reading_max_num_retries_def_val">5000</string>
    <string name="manual_y_axis_plot_2_case2_def_val">0.5</string>
    <string name="manual_y_axis_plot_3_case2_def_val">5</string>

    <string name="calibration_folder_path_def_val">NFCSensorComm/Calibration profiles</string>

    <string-array name="graph_time_scale_entries">
        <item>"second"</item>
        <item>"millisecond"</item>
        <item>"microsecond"</item>
    </string-array>

    <!-- Values must be taken from enumeration TimescaleEnum -->
    <string-array name="graph_time_scale_values">
        <item>"SECOND"</item>
        <item>"MILLISECOND"</item>
        <item>"MICROSECOND"</item>
    </string-array>

    <string-array name="cpu_freq_values">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
        <item>"11"</item>
        <item>"12</item>
    </string-array>

    <string-array name="cpu_freq_entries">
        <item>"0.380Khz"</item>
        <item>"0.724Khz"</item>
        <item>"1.297Khz"</item>
        <item>"2.168Khz"</item>
        <item>"3.271Khz"</item>
        <item>"6.706Khz"</item>
        <item>"13.368Khz"</item>
        <item>"27.593Khz"</item>
        <item>"56.306Khz"</item>
        <item>"83.892Khz"</item>
        <item>"112.359Khz"</item>
        <item>"169.491Khz"</item>
        <item>"Automatic"</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>